src/tests/functionality/assignment_5_functions_headers/valid/12_mandatory_include_header_forward_declaration.c
#include "src/tests/functionality/assignment_5_functions_headers/headers/forward_helpers.h"

int main() {
    return header_square(5);
}
