src/tests/functionality/assignment_5_functions_headers/invalid_semantic/14_mandatory_function_redefinition_from_headers.c
#include "src/tests/functionality/assignment_5_functions_headers/headers/redefine_function_a.h"
#include "src/tests/functionality/assignment_5_functions_headers/headers/redefine_function_b.h"

int main() {
    return duplicate_from_header(1);
}
